--- a/html-css/WOW/styles.css
+++ b/html-css/WOW/styles.css
@@ -54,3 +54,10 @@ nav ul li {
     display: inline-block;
     list-style-type: none;
 }
+
+nav>ul>li {
+    color: #ffffff;
+    display: block;
+    padding: 35px;
+    text-decoration: none;
+}
