--- a/html-css/WOW/styles.css
+++ b/html-css/WOW/styles.css
@@ -61,3 +61,23 @@ nav>ul>li>a {
     padding: 35px;
     text-decoration: none;
 }
+
+table,
+th,
+td {
+    border: 1px solid black;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+th,
+td {
+    padding: 20px;
+}
+
+th {
+    font-size: 20px;
+    background-color: #FCBF49;
+}
